# fold

./: .gitignore  DEV.md  LICENSE  Makefile  README.md  _setup.py  dev-requirements.txt  make.bat  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/src/: api.md  api.rst  conf.py  index.md  index.rst  installation.md  installation.rst  introduction.rst  support.md  support.rst
docs/src/plugins/: index.rst
docs/src/plugins/outputs/: index.rst  stdout.rst
fold/: __init__.py  utils.py
fold/config/: __init__.py  common.py  json.py  toml.py
fold/core/: __init__.py  config.py  logger.py  plugin.py
fold/logger/: __init__.py  logger.py
fold/output/: common.py  stdout.py
fold/outputs/: __init__.py  common.py  stdout.py
fold/plugin/: __init__.py  plugin.py
fold/plugins/config/: __init__.py  common.py  json.py  toml.py
fold/plugins/logger/: __init__.py  logger.py
fold/plugins/outputs/: __init__.py  common.py  stdout.py
fold/utils/: __init__.py  dynamicImport.py  imp.py  modObjStr.py  plugin.py
test/: __init__.py  test_config.py  test_logger.py  test_plugin.py  test_utils.py
test/config/: test_json.py
test/core/: test_config.py  test_logger.py
test/outputs/: test_stdout.py
test/plugin/: test_plugin.py
test/plugin/sample1/: p1.py  p2.py
test/sample_plugins/: __init__.py  p1.py
test/unit/core/: test_plugin.py
test/unit/core/sample_plugins/: p2.py
test/unit/plugins/config/: test_json.py  test_toml.py
test/unit/plugins/outputs/: test_stdout.py
test/unit/utils/: test_dynamicImport.py
tests/: test_logger.py  test_plugin.py
tests/config/: test_toml.py
tests/outputs/: test_stdout.py
tests/sample_plugins/: p2.py
tests/unit/: test_logger.py  test_plugin.py
tests/unit/config/: test_config.py
tests/unit/core/: test_plugin.py
tests/unit/core/sample_plugins/: p1.py
tests/unit/plugins/: test_logger.py
tests/unit/plugins/outputs/: test_common.py
tests/unit/utils/: test_dynamicImport.py  test_modObjStr.py
