[tool.poetry]
authors = ["Stanley Wu <stanleywu@scrappylabs.dev>"]
description = ""
license = "MIT"
name = "fold"
version = "0.2.0"

packages = [{include = "fold"}]

[tool.poetry.dependencies]
PyYAML = "^6.0"
loguru = "^0.5.3"
pydantic = "^1.9.0"
python = "^3.10"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.2"
black = "^21.12b0"
coverage = "^6.2"
mypy = "^0.931"
myst-parser = "^0.16.1"
poethepoet = "^0.12.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
