[tool.poetry]
authors = ["Stanley Wu <stanleywu@scrappylabs.dev>"]
description = ""
license = "MIT"
name = "fold"
version = "0.3.0"

packages = [{include = "fold"}]

[tool.poetry.dependencies]
PyYAML = "^6.0"
loguru = "^0.5.3"
pydantic = "^1.9.0"
python = "^3.10"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.2"
black = "^21.12b0"
coverage = "^6.2"
myst = "^1.0.4"
myst-parser = "^0.16.1"
poethepoet = "^0.12.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"

[tool.poe.tasks]
help = "Run tests"
test = "pytest test/"

[tool.poe.tasks.coverage]
cmd = "pytest --cov=fold test/"
help = "Run the coverage test on the source code"

[tool.poe.tasks.cov_report]
cmd = "python -m coverage report"
deps = ["coverage"]
help = "Generate coverage report"

[tool.poe.tasks.cov_html]
cmd = "python -m coverage html"
deps = ["coverage"]
help = "Generate coverage html"

[tool.poe.tasks.docs]
cmd = "make -C docs html"
help = "Build the documentation"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
